fixed scrollbar radius sizes

--- a/Extension/src/pages/common/components/ui/Select/select.pcss
+++ b/Extension/src/pages/common/components/ui/Select/select.pcss
@@ -51,7 +51,7 @@
         }
 
         &::-webkit-scrollbar-thumb {
-            border-radius: 20px;
+            border-radius: 4px;
             background-color: var(--stroke-icons-gray-icons-disabled);
         }
     }
