--- a/Extension/src/pages/filtering-log/styles/common.pcss
+++ b/Extension/src/pages/filtering-log/styles/common.pcss
@@ -23,7 +23,7 @@ body,
 
 *::-webkit-scrollbar-thumb {
     background-color: var(--stroke-icons-gray-icons-disabled);
-    border-radius: 20px;
+    border-radius: 12px;
 }
 
 *::-webkit-scrollbar-corner {
