--- a/Extension/src/pages/popup/components/Tabs/tabs.pcss
+++ b/Extension/src/pages/popup/components/Tabs/tabs.pcss
@@ -44,7 +44,7 @@
 
         &::-webkit-scrollbar-thumb {
             background-color: var(--stroke-icons-gray-icons-disabled);
-            border-radius: 20px;
+            border-radius: 6px;
         }
     }
 
